change description in style

--- a/wp-content/themes/wedding/style.css
+++ b/wp-content/themes/wedding/style.css
@@ -3,6 +3,6 @@
   Theme URI: http://nataliaeuteamo.com.br
   Author: Resuta
   Author URI: http://resuta.com.br
-  Description: Wedding website, you can stay avontade to use and let your moment immortalized.
+  Description: Wedding website, you can stay to use and let your moment immortalized.
   Version: 1.0
 */
