change info theme header

--- a/wp-content/themes/wedding/style.css
+++ b/wp-content/themes/wedding/style.css
@@ -1,6 +1,6 @@
 /*!
   Theme Name: Wedding Website Natália & Accácio
-  Theme URI: http://nataliaeuteamo.com.br
+  Theme URI: http://nataliaeaccacio.com.br
   Author: Resuta
   Author URI: http://resuta.com.br
   Description: Wedding website, you can stay to use and let your moment immortalized.
