change color font form and add open graph

--- a/wp-content/themes/wedding/style.css
+++ b/wp-content/themes/wedding/style.css
@@ -283,7 +283,7 @@ body {
 /* Form
 ---------------------------------- */
 .form li {
-	color: #5d5d5d;
+	color: #F5F4F4;
 	margin-bottom: 20px;
 	text-align: left;
 }
